Adding clear button

--- a/webServer/templates/index.html
+++ b/webServer/templates/index.html
@@ -39,6 +39,8 @@ Connection: <span id="ws-status"> Waiting... </span>
     <span id="ledMinMaxError"></span>
   </div> -->
   <p>
+    <input type="button" id="clearButton" value="Turn off LEDs">
+  <p>
   Pick Color:
   <input type="color" id="setColor" value="#ff0000">
   <p>
