--- a/webServer/templates/index.html
+++ b/webServer/templates/index.html
@@ -13,6 +13,11 @@
     input[type=number]{
       width: 5em;
     }
+    .inputBlock {
+      border: 1px solid red;
+      border-radius: 4px;
+      background-color: #f7e294;
+    }
   </style>
 
 </head>
@@ -46,6 +51,10 @@ Connection: <span id="ws-status"> Waiting... </span>
   <p>
   Brightness:
   <input type="range" id="setBrightness" min="0" max="100" step="1" value="100">
+  <p>
+  <input type="number" id="rainbowSpeed" min="1" value="0.01">
+  <br>
+  <input type="button" id="rainbowForever" value="Rainbow">
 </div>
 
 
